# zynthian-ui

./: .clang-format  .gitignore  .zynthian_gui.py.kate-swp  Audio Input needs a control-window  README.md  apicarla.py  bankwrapper.py  carla  controlwrapper.py  data  layerswrapper.py  main.py  main.pyproject  my-data  software  start.sh  startfull.sh  sys-scripts  zyncoder  zynthian.sh  zynthian_autoconnect.py  zynthian_autoconnect_jack.py  zynthian_debug.sh  zynthian_emu.sh  zynthian_engine.py  zynthian_envars.sh  zynthian_gui.py  zynthian_gui_config.py  zynthian_headless.py  zynthian_main.py  zynthian_midi.py  zynthian_osc.py  zynthian_qt_gui.py  zynthian_state_schema.py
carla-patch/: Carla-tcpOscFix.diff
doc/: List of MIDI Continuous Contollers.html
icons/: convert.sh
img/: fb1_zynthian.raw  fb_zynthian_boot.raw  fb_zynthian_error.raw  zynthian_gui_loading.xcf  zynthian_gui_loading_trans.xcf  zynthian_logo_boot_oram.xcf
jackpeak/: CMakeLists.txt  __init__.py  build.sh  jackpeak.c  jackpeak.h  jackpeak.py
qml-ui/: AdminPage.qml  AudioRecorderPage.qml  BanksPage.qml  ControlPage.qml  CustomTheme.qml  LayerCreation.qml  LayerOptionsPage.qml  LayersPage.qml  MainPage.qml  MainScreensLayout.qml  MidiRecorderPage.qml  PresetsPage.qml  SnapshotPage.qml  main.qml
sw-patch/: Carla-zynthian.diff
test/: missing_test_navigation.sh  test_navigation.py
zynautoconnect/: __init__.py  zynthian_autoconnect.py
zynconf/: __init__.py  zasfx_16ch.xmz  zasfx_2ch.xmz  zasfx_4ch.xmz  zasfx_8ch.xmz  zynthian_config.py
zyngine/: .zynthian_layer.py.kate-swp  __init__.py  ch11n.py  pedalboard2modhost  zyngine_config.py  zynthian_audio_recorder.py  zynthian_chain.py  zynthian_chain_manager.py  zynthian_channel.py  zynthian_controller.py  zynthian_ctrldev_manager.py  zynthian_engine.py  zynthian_engine_aeolus.py  zynthian_engine_alsa_mixer.py  zynthian_engine_audio_in.py  zynthian_engine_audio_mixer.py  zynthian_engine_audioplayer.py  zynthian_engine_carla.py  zynthian_engine_csound.py  zynthian_engine_festival.py  zynthian_engine_fluidsynth.py  zynthian_engine_inet_radio.py  zynthian_engine_jalv.py  zynthian_engine_jamulus.py  zynthian_engine_linuxsampler.py  zynthian_engine_midi_control.py  zynthian_engine_mixer.py  zynthian_engine_modhost.py  zynthian_engine_modui.py  zynthian_engine_old.py  zynthian_engine_pianoteq.py  zynthian_engine_pianoteq6.py  zynthian_engine_pianoteq_jsonrpc.py  zynthian_engine_puredata.py  zynthian_engine_radio.py  zynthian_engine_sdrradio.py  zynthian_engine_setbfree.py  zynthian_engine_sfizz.py  zynthian_engine_sooperlooper.py  zynthian_engine_sysex.py  (+14 more)
zyngui/: .zynthian_gui_zynpad.py.kate-swp  __init__.py  multitouch.py  zynthian_audio_recorder.py  zynthian_ctrldev_manager.py  zynthian_gui.py  zynthian_gui_admin.py  zynthian_gui_apps.py  zynthian_gui_arranger.py  zynthian_gui_audio_in.py  zynthian_gui_audio_out.py  zynthian_gui_audio_recorder.py  zynthian_gui_autoeq.py  zynthian_gui_bank.py  zynthian_gui_base.py  zynthian_gui_bluetooth.py  zynthian_gui_brightness_config.py  zynthian_gui_chain_menu.py  zynthian_gui_chain_options.py  zynthian_gui_config.py  zynthian_gui_confirm.py  zynthian_gui_context_menu.py  zynthian_gui_control.py  zynthian_gui_control_test.py  (+70 more)
zynlibs/zynaudioplayer/: CMakeLists.txt  __init__.py  audio_player.cpp  audio_player.h  build.sh  osc.h  osc.txt  player.c  player.cpp  player.h  tinyosc.c  tinyosc.h  unit_tests.py  zynaudioplayer.c  zynaudioplayer.cpp  zynaudioplayer.h  zynaudioplayer.py
zynlibs/zynmixer/: CMakeLists.txt  __init__.py  mixer.c  mixer.h  tinyosc.c  zynmixer.py
zynlibs/zynseq/: CMakeLists.txt  __init__.py  constants.h  file_format.txt  metronome.h  pattern.cpp  pattern.h  patternmanager.cpp  patternmanager.h  sequence.cpp  sequence.h  sequencemanager.cpp  sequencemanager.h  song.cpp  song.h  test.py  timebase.cpp  timebase.h  track.cpp  track.h  unit_tests.py  zynseq.cpp  zynseq.h  zynseq.py  zynseq.txt
zynlibs/zynsmf/: CMakeLists.txt  __init__.py  event.cpp  event.h  smf.cpp  smf.h  track.cpp  track.h  unit_tests.py  zynsmf.cpp  zynsmf.h  zynsmf.py
zynmixer/: CMakeLists.txt  mixer.c  mixer.h  zynmixer.py
(+107 files in other folders)
